--- a/website1/templates/portfolio.html
+++ b/website1/templates/portfolio.html
@@ -1,2 +1,43 @@
 <!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<div class="container" id="portofolio">
+    <div class="row row5">
+                <div class="col">
+                    <h2>Porfolio</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt dolor autem iusto cupiditate atque
+                        praesentium facilis voluptatibus incidunt magnam ipsa, doloremque amet reprehenderit eius officia
+                        minima temporibus optio impedit molestias.</p>
+                </div>
+    </div>
+    <div class="row">
+                <div class="col">
+                    <div class="card">
+                        <img class="img-thumbnail" src="./assets/img/big-project-image.png" alt="Thumbnail image">
+                        <div class="card-body">
+                          <h5 class="card-title text-primary">Project Name</h5>
+                          <p class="card-text">itaque ex cupiditate iure in explicabo quasi deserunt! Explicabo,
+                            excepturi. Alias, eaque suscipit.</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="col">
+                    <div class="card" >
+                        <img class="img-thumbnail" src="./assets/img/big-project-image.png" alt="Thumbnail image">
+                        <div class="card-body">
+                          <h5 class="card-title text-primary">Project Name</h5>
+                          <p class="card-text">itaque ex cupiditate iure in explicabo quasi deserunt! Explicabo,
+                            excepturi. Alias, eaque suscipit.</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="col">
+                    <div class="card" >
+                        <img class="img-thumbnail" src="./assets/img/big-project-image.png" alt="Thumbnail image">
+                        <div class="card-body">
+                          <h5 class="card-title text-primary">Project Name</h5>
+                          <p class="card-text ">itaque ex cupiditate iure in explicabo quasi deserunt! Explicabo,
+                            excepturi. Alias, eaque suscipit.</p>
+                        </div>
+                      </div>
+                </div>
+    </div>
+</div>
