--- a/website1/assets/css/style.css
+++ b/website1/assets/css/style.css
@@ -1,3 +1,15 @@
 body{
-    background: #BDBDBD;
+    /* background: #BDBDBD; */
+}
+
+#formulario {
+    background-color: rgb(241, 235, 235);
+}
+
+#portofolio {
+    margin-top: 2rem;
+}
+#contact {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
